sfdx-source/force-app/main/default/objects/Process_Flow_Request__c/Process_Flow_Request__c.object-meta.xml
<CustomObject>
    <description>LEM-8466 - Tracks a request for onboarding a number of Store Accounts, so request information can be referenced in a front-end process flow. Contains lookups to relevant records -- such as Contract, WorkOrder, etc. -- as well as information on the request&apos;s Status and other important parameters.</description>
    <label>Process Flow Request</label>
    <nameField>
        <displayFormat>PFR-{00000000}</displayFormat>
        <label>Process Flow Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Flow Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>