sfdx-source/force-app/main/default/objects/Process_Flow_Request__c/fields/Async_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Async_Job_ID__c</fullName>
    <description>Stores the unique identifier for the associated Salesforce Batch Apex job. Useful for monitoring job status, troubleshooting, and auditing.</description>
    <inlineHelpText>Stores the unique identifier for the associated Salesforce Batch Apex job. Useful for monitoring job status, troubleshooting, and auditing.</inlineHelpText>
    <label>Async Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>