sfdx-source/force-app/main/default/objects/Process_Flow_Request__c/fields/Batch_Delay_Number__c.field-meta.xml
<CustomField>
    <fullName>Batch_Delay_Number__c</fullName>
    <description>Indicates the number of delays to use before invoking asynchronous logic. Useful if, for example, we want to wait on the completion of some other logic before executing additional logic.</description>
    <label>Batch Delay Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>