sfdx-source/force-app/main/default/objects/Process_Flow_Request__c/fields/CCP_ANSO_flow__c.field-meta.xml
<CustomField>
    <fullName>CCP_ANSO_flow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-12362 Indicate if user has selected manage package functionality in ANSO flow</description>
    <label>CCP ANSO flow</label>
    <type>Checkbox</type>
</CustomField>