sfdx-source/force-app/main/default/objects/Process_Flow_Request__c/fields/CCP_Applied__c.field-meta.xml
<CustomField>
    <fullName>CCP_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-16093 It indicates whether user has modified Package/Product Selection/Deselection on Entitlement Selection in ANSO</description>
    <label>CCP Applied</label>
    <type>Checkbox</type>
</CustomField>