sfdx-source/force-app/main/default/objects/Process_Flow_Request__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-8466 - Relationship to the relevant Contract from which the Bulk Corporate Onboarding Request originated.</description>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Process Flow Requests</relationshipLabel>
    <relationshipName>Process_Flow_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>