sfdx-source/force-app/main/default/objects/Process_Flow_Request__c/fields/Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>Feature_Name__c</fullName>
    <label>Feature Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>