sfdx-source/force-app/main/default/objects/Process_Flow_Request__c/fields/Fixed_Store_IDs__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Store_IDs__c</fullName>
    <description>Lists the IDs, in comma-delimited format, of the Stores that had various issues that had to be fixed through the ANSO flow -- such as address verification issues. This is used so that the counts of fixed stores remain accurate and do not duplicate results.</description>
    <label>Fixed Store IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>