sfdx-source/force-app/main/default/objects/Process_Flow_Request__c/fields/Fixed_Stores_Count__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Stores_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Counts the Store IDs from the `Fixed_Store_IDs__c` field, this will tell us the number of Stores that had their address issues resolved in ANSO.</description>
    <label>Fixed Stores Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>