sfdx-source/force-app/main/default/objects/Process_Flow_Request__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>LEM-12362 Contains Id of the contract associated Quote Line Group</description>
    <label>Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>