sfdx-source/force-app/main/default/objects/Process_Flow_Request__c/fields/Is_Closed__c.field-meta.xml
<CustomField>
    <fullName>Is_Closed__c</fullName>
    <description>LEM-8466 - Calculated boolean to indicate the Status__c is not in an open status. Similar to IsClosed on Opportunity and Case.</description>
    <formula>OR(ISPICKVAL(Status__c, &quot;Aborted&quot;), ISPICKVAL(Status__c, &quot;Completed&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>