sfdx-source/force-app/main/default/objects/Process_Flow_Request__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-12957 - Relationship to the relevant Opportunity from which the Brand and Business Reference Action originated.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Process Flow Requests</relationshipLabel>
    <relationshipName>Process_Flow_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>