sfdx-source/force-app/main/default/objects/Process_Flow_Request__c/fields/Removed_Stores__c.field-meta.xml
<CustomField>
    <fullName>Removed_Stores__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Indicates the number of Stores removed due to errors.</description>
    <inlineHelpText>Indicates the number of Stores removed due to errors.</inlineHelpText>
    <label>Removed Stores</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>