sfdx-source/force-app/main/default/objects/Process_Flow_Request__c/fields/Serialized_Entitlements_Data__c.field-meta.xml
<CustomField>
    <fullName>Serialized_Entitlements_Data__c</fullName>
    <description>LEM-12362 Contains a JSON string of entitlement selection/deselection</description>
    <label>Serialized Entitlements Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>