sfdx-source/force-app/main/default/objects/Process_Flow_Request__c/fields/Serialized_Object_Data__c.field-meta.xml
<CustomField>
    <fullName>Serialized_Object_Data__c</fullName>
    <description>LEM-8466 - Contains a JSON string of serialized data used in the request.</description>
    <label>Serialized Object Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>