sfdx-source/force-app/main/default/objects/Process_Flow_Request__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>LEM-8466 - Picklist with values representing the specific stage at which the Flow is on.</description>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Work Order Type Selection</fullName>
            </value>
            <value>
                <fullName>Work Order Creation</fullName>
            </value>
            <value>
                <fullName>Work Order Association</fullName>
            </value>
            <value>
                <fullName>Account File Upload</fullName>
            </value>
            <value>
                <fullName>Business Vertical</fullName>
            </value>
            <value>
                <fullName>Payment Account</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Final Error Check</fullName>
            </value>
            <value>
                <fullName>Processing Stores</fullName>
            </value>
            <value>
                <fullName>Upload Complete</fullName>
            </value>
            <value>
                <fullName>Flow Initiated</fullName>
            </value>
            <value>
                <fullName>Flow Completed</fullName>
            </value>
            <value>
                <fullName>External Ids Created</fullName>
            </value>
            <value>
                <fullName>Email Sent</fullName>
            </value>
            <value>
                <fullName>Select Entitlement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>