sfdx-source/force-app/main/default/objects/Process_Flow_Request__c/fields/Upload_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Upload_Attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Tracks the number of times a CSV upload has been attempted for this request.</description>
    <inlineHelpText>Tracks the number of times a CSV upload has been attempted for this request.</inlineHelpText>
    <label>Upload Attempts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>