sfdx-source/force-app/main/default/objects/Process_Flow_Request__c/fields/User_Feedback__c.field-meta.xml
<CustomField>
    <fullName>User_Feedback__c</fullName>
    <description>Stores user feedback collected from the lightning components as a serialized JSON object.</description>
    <label>User Feedback</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>