sfdx-source/force-app/main/default/objects/Process_Flow_Request__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-8466 - Association of a Bulk Corporate Onboarding Request to a specific Work Order.</description>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Process Flow Requests</relationshipLabel>
    <relationshipName>Process_Flow_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>