sfdx-source/force-app/main/default/objects/Process_Flow_Request__c/fields/Work_Order_Selection_Method__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Selection_Method__c</fullName>
    <description>LEM-8466 - Represents how the user associated this process to a Work Order - either by creating a new Work Order or selecting an existing one.</description>
    <label>Work Order Selection Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Created New</fullName>
            </value>
            <value>
                <fullName>Selected Existing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>