sfdx-source/force-app/main/default/objects/Process_Flow_Request__c/fields/Work_Step__c.field-meta.xml
<CustomField>
    <fullName>Work_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Step</label>
    <referenceTo>WorkStep</referenceTo>
    <relationshipLabel>Process Flow Requests</relationshipLabel>
    <relationshipName>Process_Flow_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>