sfdx-source/force-app/main/default/objects/Process_Flow_Request__c/recordTypes/Brand_and_Business_Reference_Flow.recordType-meta.xml
<RecordType>
    <fullName>Brand_and_Business_Reference_Flow</fullName>
    <active>true</active>
    <description>Used for Brand and Business Reference Flow Started from Opportunity and Contract</description>
    <label>Brand and Business Reference Flow</label>
</RecordType>