sfdx-source/force-app/main/default/objects/Process_Flow_Request__c/recordTypes/Bulk_Store_Onboarding.recordType-meta.xml
<RecordType>
    <fullName>Bulk_Store_Onboarding</fullName>
    <active>true</active>
    <label>Bulk Store Onboarding</label>
</RecordType>