sfdx-source/force-app/main/default/objects/Process_Flow_Request__c/recordTypes/Flows.recordType-meta.xml
<RecordType>
    <fullName>Flows</fullName>
    <active>true</active>
    <description>Track which flows have been launched</description>
    <label>Flows</label>
</RecordType>